# MorphOS

./: README.md
projects/: CMakeLists.txt
projects/data/: VA_colored_faces_with_mat.mtl  VA_textured_faces_with_ananas.mtl
projects/data/cube/: cube_materials.mtl
projects/simpleSceneTester/: CMakeLists.txt
projects/simpleSceneTester/code/dep/inc/: BmpLoader.h  MtlLoader.h  ObjLoader.h  RawImage.h  commonFunctions.h  glDrawControl.h
projects/simpleSceneTester/code/dep/src/: BmpLoader.cpp  MtlLoader.cpp  ObjLoader.cpp  commonFunctions.cpp  glDrawControl.cpp
projects/simpleSceneTester/code/src/: bmpLoadTester.cpp  mtlLoadTester.cpp  sceneTester.cpp
projects/tests_scripts/: VA_test_load_BMP.bat  VA_test_load_BMP_Linux.sh  VA_test_load_BMP_MORPHOS.sh  VA_test_load_BMP_MORPHOS.txt  VA_test_load_MTL.bat  VA_test_load_MTL_Linux.sh  VA_test_load_MTL_Linux_2.sh  VA_test_load_MTL_MORPHOS.txt  VA_test_load_MTL_MORPHOS_2.sh  VA_test_loading_colored_faces_obj_DEBUG.bat  VA_test_loading_colored_faces_with_mat_obj_DEBUG.bat  VA_test_loading_colored_faces_with_mat_obj_Linux.sh  VA_test_loading_colored_faces_with_mat_obj_MORPHOS.sh  VA_test_loading_colored_faces_with_texture_obj_Linux.sh  VA_test_loading_colored_faces_with_texture_obj_MORPHOS.sh  VA_test_loading_textured_cube_obj_DEBUG.bat  VA_test_loading_textured_cube_obj_Linux.sh  VA_test_loading_textured_cube_obj_MORPHOS.sh  VA_test_loading_textured_obj_DEBUG.bat  VA_test_loading_uncolored_faces_obj_DEBUG.bat  VA_test_loading_uncolored_faces_obj_Linux.sh  VA_test_loading_uncolored_faces_obj_MORPHOS.sh
